--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,6 +1,7 @@
 :root {
     --primary-color: #FEF9FF;
     --secondary-color: #736CED;
+    --secondary-rgba: rgba(115, 108, 237, 1);
     --highlight-color: #32CD32;
     --text-color: #000000;
     --border-color: #D3D3D3;
@@ -14,6 +15,7 @@
     --grey-light: #f0f0f0;
     --grey: #ccc;
     --grey-dark: #999;
+    --grey-dark-rgba: rgba(153,153,153,1);
     --grey-darker: #666;
     --grey-darkest: #333;
     --grey-black: #1a1a1a;
