--- a/src/components/about/styles.module.scss
+++ b/src/components/about/styles.module.scss
@@ -22,7 +22,7 @@
 
     @media (min-width: 800px){
 
-        height: 50vh;
+        height: 40vh;
         padding: 10px 30px;
 
     }
@@ -46,6 +46,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    width: 100%;
 
     @media (min-width: 800px){
         flex-direction: row;
@@ -60,7 +61,17 @@
     justify-content: center;
     align-items: center;
     margin: 10px;
+    width: 100%;
+    padding: 1.5rem;
+}
 
+.stackLi:not(:last-of-type) {
+    border-bottom: 1px solid var(--grey-dark-rgba);
+
+    @media (min-width: 800px) {
+        border-bottom: none;
+        border-right: 1px solid var(--grey-dark-rgba);
+    }
 }
 
 .stackIcon {
